# Archeway

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
static/css/: auth.css  buttons.css  cards.css  dashboard-fix.css  dashboard.css  forms.css  header.css  homepage.css  job-listings.css  kanban.css  modals.css  nav.css  notifications.css  sidebar.css  styles.css  widgets.css
static/js/: animation.js  auth.js  bugnotificationbox.js  dashboard-missing-functions.js  dashboard.js  form-submission-update.js  form-validation-utils.js  google-auth.js  input-validator.js  minibugicon.js  particle-network.js  register.js  sidebar-fix.js  signin.js  storage.js  testimonialsnotification.js
storage/: old_html_dashboard.txt  old_html_homepage.txt  old_html_register.txt  old_html_signin.txt  oldapp_py.txt
templates/: base.html  bugreportform.html  dashboard.html  dino.html  homepage.html  register.html  signin.html
templates/email/: welcome.html
templates/footer/: about.html  ca_notice.html  dino.html  privacy_policy.html  terms_of_service.html  testimonials.html
templates/forms/: feature_request_form.html  forgot_password.html  password_reset_success.html  reset_password.html  testimonialform.html
testing/: README-TESTING.md  cleanup.py  conftest.py  test_app.py  test_basic.py  test_email.py  test_google_oauth.py  test_input_sanitizer.py  test_job_validation.py  test_password_reset.py  test_security.py
utils/: input_sanitizer.py  password_validator.py
