[project]
name = "cs188-final-project"
version = "0.1.0"
description = "Final Flask project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jordan Martin", email = "jordan.martin@drake.edu" }
]
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-dance>=7.1.0",
    "flask-mail>=0.10.0",
    "flask-requests>=0.0.14",
    "flask-restful>=0.3.10",
    "flask-session>=0.8.0",
    "itsdangerous>=2.2.0",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
cs188-final-project = "cs188_final_project.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cs188_final_project"]
